<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings_ok">OK</string>
    <string name="settings_cancel">Cancel</string>
    <string name="wifi_setting">Wifi Setting</string>
    <string name="wifi_capabilities_psk">Protected by %1$s</string>
    <string name="wifi_capabilities_wps">WPS can be used</string>
    <string name="wifi_capabilities_open">Open system certification</string>
    <string name="wifi_band_24ghz">2.4GHz</string>
    <string name="wifi_band_5ghz">5GHz</string>
    <string name="wifi_detail_signal_strength">Signal strength</string>
    <string name="wifi_detail_frequency">Frequency</string>
    <string name="wifi_detail_ip_address">IP address</string>
    <string name="wifi_detail_gateway">Gateway</string>
    <string name="wifi_detail_subnet_mask">Subnet mask</string>
    <string name="wifi_detail_dns">DNS</string>
    <string name="wifi_detail_status_info">Status Info</string>
    <string name="wifi_detail_connecting_speed">Connecting speed</string>
    <string name="wifi_detail_security">Security</string>
    <string name="wifi_detail_mac_address">Mac address</string>
    <string name="wifi_signal_strength_1">weak</string>
    <string name="wifi_signal_strength_2">normal</string>
    <string name="wifi_signal_strength_3">good</string>
    <string name="wifi_signal_strength_4">excellent</string>
    <string name="wifi_connect">Connected</string>
    <string name="wifi_saved">Saved</string>
    <string name="wifi_opening">Wi-Fi Opening…</string>
    <string name="wifi_closing">Wi-Fi Closing…</string>
    <string name="wifi_scanning">Wi-Fi Scanning…</string>
    <string name="wifi_open_tips">To see the available networks, turn on WiFi.</string>
    <string name="wifi_add_network">Add Network</string>
    <string name="wifi_error_password">Unable to connect to Wi-Fi.Please check the password.</string>
    <string name="wifi_dialog_password">Password</string>
    <string name="wifi_dialog_ed_hint">Enter the password</string>
    <string name="wifi_dialog_identity">Identity</string>
    <string name="wifi_dialog_identity_hint">Enter the identity</string>
    <string name="wifi_eap_method">EAP method</string>
    <string name="wifi_eap_phase2">Phase 2 authentication</string>
    <string name="wifi_eap_ca_cert">CA certificate</string>
    <string name="wifi_eap_ca_cert_do_not_validate">Do not validate</string>
    <string name="wifi_eap_ca_cert_use_system">Use system certificates</string>
    <string name="wifi_eap_user_cert">User certificate</string>
    <string name="wifi_eap_user_cert_none">None</string>
    <string name="wifi_eap_domain">Domain</string>
    <string name="wifi_eap_domain_hint">Enter the domain</string>
    <string name="wifi_eap_anonymous_identity">Anonymous identity</string>
    <string name="wifi_eap_anonymous_identity_hint">Enter the anonymous identity</string>
    <string name="wifi_error_connect_failed">Unable to connect to Wi-Fi.Please check the network settings.</string>
    <string-array name="wifi_eap_method_entries">
        <item translatable="false">PEAP</item>
        <item translatable="false">TLS</item>
        <item translatable="false">TTLS</item>
        <item translatable="false">PWD</item>
        <item translatable="false">SIM</item>
        <item translatable="false">AKA</item>
        <item translatable="false">AKA\'</item>
    </string-array>
    <string-array name="wifi_eap_peap_phase2_entries">
        <item>None</item>
        <item translatable="false">MSCHAPV2</item>
        <item translatable="false">GTC</item>
        <item translatable="false">SIM</item>
        <item translatable="false">AKA</item>
        <item translatable="false">AKA\'</item>
    </string-array>
    <string-array name="wifi_eap_ttls_phase2_entries">
        <item>None</item>
        <item translatable="false">PAP</item>
        <item translatable="false">MSCHAP</item>
        <item translatable="false">MSCHAPV2</item>
        <item translatable="false">GTC</item>
    </string-array>
    <string-array name="wifi_security_entries">
        <item>@string/wifi_dialog_none</item>
        <item>@string/wifi_dialog_wep</item>
        <item>@string/wifi_dialog_wpa</item>
        <item>@string/wifi_dialog_wpa2_enterprise</item>
        <item>@string/wifi_dialog_wpa3_enterprise</item>
    </string-array>
    <string name="wifi_dialog_cancel">Cancel</string>
    <string name="wifi_dialog_connect">Connect</string>
    <string name="wifi_dialog_disconnect">Disconnect</string>
    <string name="wifi_dialog_none">None</string>
    <string name="wifi_dialog_wep">WEP</string>
    <string name="wifi_dialog_wpa">WPA</string>
    <string name="wifi_dialog_wpa2_enterprise">WPA2-Enterprise</string>
    <string name="wifi_dialog_wpa3_enterprise">WPA3-Enterprise</string>
    <string name="wifi_dialog_show_password">Show password</string>
    <string name="wifi_dialog_show_advanced_options">Advanced options</string>
    <string name="wifi_dialog_metered">Metered</string>
    <string name="wifi_dialog_delete_internet_setting"><u>Delete this wifi setting</u></string>
    <string name="metered_dialog_auto">Detect automatically</string>
    <string name="metered_dialog_metered">Treat as metered</string>
    <string name="metered_dialog_unmetered">Treat as unmetered</string>
    <string name="wifi_dialog_proxy">Proxy</string>
    <string name="proxy_dialog_none">None</string>
    <string name="proxy_dialog_manual">Manual</string>
    <string name="proxy_dialog_auto_config">Proxy Auto-Config</string>
    <string name="wifi_dialog_ip_settings">IP settings</string>
    <string name="wifi_dialog_ip_address">IP address</string>
    <string name="wifi_dialog_gateway">Gateway</string>
    <string name="wifi_dialog_network_prefix_length">Network prefix length</string>
    <string name="wifi_dialog_dns1">DNS 1</string>
    <string name="wifi_dialog_dns2">DNS 2</string>
    <string name="wifi_dialog_pac_url">PAC URL</string>
    <string name="wifi_dialog_proxy_hostname">Proxy hostname</string>
    <string name="wifi_dialog_proxy_port">Proxy port</string>
    <string name="wifi_dialog_bypass_proxy_for">Bypass proxy for</string>
    <string name="ip_settings_dialog_dhcp">DHCP</string>
    <string name="ip_settings_dialog_static">Static</string>
    <string name="bt_setting">BT(2.4GHz Wireless)</string>
    <string name="bt_device_name">Device name : %1$s</string>
    <string name="bt_device_address">Bluetooth address : %1$s</string>
    <string name="bt_device_rename">Rename</string>
    <string name="bt_paired_device">Paired devices :</string>
    <string name="bt_available_device">Available Device :</string>
    <string name="bt_not_supported">Bluetooth not supported</string>
    <string name="bt_name_cannot_be_empty">Bluetooth name cannot be empty！</string>
    <string name="bt_pair">Pair</string>
    <string name="bt_disconnect">Disconnect</string>
    <string name="bt_disconnect_device">Disconnect device?</string>
    <string name="bt_disconnect_hint">Your device will disconnect from</string>
    <string name="bt_searching">Searching…</string>
    <string name="bt_connecting">Connecting…</string>
    <string name="bt_disconnecting">Disconnecting…</string>
    <string name="bt_connect_success">Successfully connected!</string>
    <string name="bt_connect_fail_or_disconnect">Connection failed or disconnected!</string>
    <string name="bt_name">Name</string>
    <string name="bt_confirm">Confirm</string>
    <string name="bt_paired_devices">Paired devices</string>
    <string name="bt_active">Active</string>
    <string name="bt_forget">Forget</string>
    <string name="bt_character_restriction_prompt">Up to 30 characters can be entered.</string>
    <string name="hint_wifi_pac_url" translatable="false">"https://www.example.com/proxy.pac"</string>
    <string name="hint_wifi_proxy_hostname" translatable="false">"proxy.example.com"</string>
    <string name="hint_wifi_proxy_port" translatable="false">"8080"</string>
    <string name="hint_wifi_bypass_proxy_for" translatable="false">"example.com,mycomp.test.com,localhost"</string>
    <string name="hint_wifi_ip_address" translatable="false">"192.168.0.1"</string>
    <string name="hint_wifi_gateway" translatable="false">"192.168.0.1"</string>
    <string name="hint_wifi_network_prefix_length" translatable="false">24</string>
    <string name="hint_wifi_dns1" translatable="false">"8.8.8.8"</string>
</resources>
