<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="@dimen/zh_dialog_item_width"
        android:layout_height="1dip"
        android:layout_gravity="center_horizontal"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/ll_metered"
        android:layout_width="@dimen/zh_dialog_item_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/WifiDetailTextViewStyle1"
            android:text="@string/wifi_dialog_metered" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/metered_result"
                style="@style/WifiDetailTextViewStyle1"
                android:text="@string/metered_dialog_auto" />

            <ImageView
                android:id="@+id/metered_down_drop"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_drop_down" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="@dimen/zh_dialog_item_width"
        android:layout_height="1dip"
        android:layout_gravity="center_horizontal"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/ll_proxy"
        android:layout_width="@dimen/zh_dialog_item_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/WifiDetailTextViewStyle1"
            android:text="@string/wifi_dialog_proxy" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/proxy_result"
                style="@style/WifiDetailTextViewStyle1"
                android:text="@string/proxy_dialog_none" />

            <ImageView
                android:id="@+id/proxy_down_drop"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_drop_down" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="@dimen/zh_dialog_item_width"
        android:layout_height="1dip"
        android:layout_gravity="center_horizontal"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/ll_proxy_auto_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/zh_dialog_margin_left"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/WifiDetailTextViewStyle1"
            android:text="@string/wifi_dialog_pac_url" />

        <EditText
            android:id="@+id/wifi_pac_url"
            style="@style/DialogEditTextStyle"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:hint=""
            android:text="@string/hint_wifi_pac_url" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_proxy_manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/zh_dialog_margin_left"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/WifiDetailTextViewStyle1"
            android:text="@string/wifi_dialog_proxy_hostname" />

        <EditText
            android:id="@+id/wifi_proxy_hostname"
            style="@style/DialogEditTextStyle"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:hint=""
            android:text="@string/hint_wifi_proxy_hostname" />

        <TextView
            style="@style/WifiDetailTextViewStyle1"
            android:text="@string/wifi_dialog_proxy_port" />

        <EditText
            android:id="@+id/wifi_proxy_port"
            style="@style/DialogEditTextStyle"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:hint=""
            android:text="@string/hint_wifi_proxy_port" />

        <TextView
            style="@style/WifiDetailTextViewStyle1"
            android:text="@string/wifi_dialog_bypass_proxy_for" />

        <EditText
            android:id="@+id/wifi_bypass_proxy_for"
            style="@style/DialogEditTextStyle"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:hint=""
            android:text="@string/hint_wifi_bypass_proxy_for" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_ip_settings"
        android:layout_width="@dimen/zh_dialog_item_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/WifiDetailTextViewStyle1"
            android:text="@string/wifi_dialog_ip_settings" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ip_settings_result"
                style="@style/WifiDetailTextViewStyle1"
                android:text="@string/ip_settings_dialog_dhcp" />

            <ImageView
                android:id="@+id/ip_settings_down_drop"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_drop_down" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="@dimen/zh_dialog_item_width"
        android:layout_height="1dip"
        android:layout_gravity="center_horizontal"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/ll_static_ip_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/zh_dialog_margin_left"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/WifiDetailTextViewStyle1"
                android:text="@string/wifi_dialog_ip_address" />

            <EditText
                android:id="@+id/wifi_ip_address"
                style="@style/DialogEditTextStyle"
                android:layout_marginTop="5dp"
                android:paddingStart="10dp"
                android:hint=""
                android:text="@string/hint_wifi_ip_address" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/WifiDetailTextViewStyle1"
                android:text="@string/wifi_dialog_gateway" />

            <EditText
                android:id="@+id/wifi_gateway"
                style="@style/DialogEditTextStyle"
                android:layout_marginTop="5dp"
                android:paddingStart="10dp"
                android:hint=""
                android:text="@string/hint_wifi_gateway" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/WifiDetailTextViewStyle1"
                android:text="@string/wifi_dialog_network_prefix_length" />

            <EditText
                android:id="@+id/wifi_network_prefix_length"
                style="@style/DialogEditTextStyle"
                android:layout_marginTop="5dp"
                android:paddingStart="10dp"
                android:hint=""
                android:text="@string/hint_wifi_network_prefix_length" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/WifiDetailTextViewStyle1"
                android:text="@string/wifi_dialog_dns1" />

            <EditText
                android:id="@+id/wifi_dns1"
                style="@style/DialogEditTextStyle"
                android:layout_marginTop="5dp"
                android:paddingStart="10dp"
                android:hint=""
                android:text="@string/hint_wifi_dns1" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>