<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/rectangle"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="@dimen/zh_dialog_width"
    android:layout_height="wrap_content" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zh_dialog_title_height">
        <TextView
            android:id="@+id/wifi_disconnect_dialog_name"
            android:textSize="@dimen/textSize20"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_add_netword"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:background="@android:color/black"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip" />

    <TextView
        android:id="@+id/tv_signal_strength"
        style="@style/WifiDetailTextViewStyle"
        android:text="@string/wifi_detail_signal_strength" />

    <TextView
        android:id="@+id/tv_frequency"
        style="@style/WifiDetailTextViewStyle"
        android:text="@string/wifi_detail_frequency" />

    <TextView
        android:id="@+id/tv_ip_address"
        style="@style/WifiDetailTextViewStyle"
        android:text="@string/wifi_detail_ip_address" />

    <TextView
        android:id="@+id/tv_gateway"
        style="@style/WifiDetailTextViewStyle"
        android:text="@string/wifi_detail_gateway" />

    <TextView
        android:id="@+id/tv_subnet_mask"
        style="@style/WifiDetailTextViewStyle"
        android:text="@string/wifi_detail_subnet_mask" />

    <TextView
        android:id="@+id/tv_dns"
        style="@style/WifiDetailTextViewStyle"
        android:text="@string/wifi_detail_dns" />

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/wifi_disconnect_dialog_cancle"
            style="@style/DialogButtonStyle"
            android:text="@string/wifi_dialog_cancle" />
        <Button
            android:id="@+id/wifi_disconnect_dialog_disconnect"
            style="@style/DialogButtonStyle"
            android:layout_marginLeft="60dp"
            android:text="@string/wifi_dialog_disconnect" />
    </LinearLayout>
</LinearLayout>