<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/rectangle"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="@dimen/zh_dialog_width"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zh_dialog_title_height">

        <TextView
            android:id="@+id/wifi_connect_dialog_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/wifi_add_network"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize20" />
    </RelativeLayout>

    <View
        android:background="@android:color/black"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip" />

    <TextView
        android:id="@+id/tv_signal_strength"
        style="@style/WifiDetailTextViewStyle"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        android:text="@string/wifi_detail_signal_strength" />

    <TextView
        android:id="@+id/tv_password"
        style="@style/WifiDetailTextViewStyle"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="35dp"
        android:text="@string/wifi_dialog_password" />


    <EditText
        android:id="@+id/wifi_connect_connect_password"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="35dp"
        style="@style/DialogEditTextStyle"
        android:inputType="textPassword"
        android:hint="@string/wifi_dialog_ed_hint" />

    <LinearLayout
        android:id="@+id/ll_enable_show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/DialogCheckBoxTextStyle"
            android:text="@string/wifi_dialog_show_password"/>

        <ImageView
            android:id="@+id/wifi_connect_dialog_show_password"
            style="@style/DialogCheckBoxImageStyle"
            android:layout_marginLeft="200dp"
            android:background="@drawable/check_off" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_show_advanced_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/DialogCheckBoxTextStyle"
            android:text="@string/wifi_dialog_show_advanced_options"/>

        <ImageView
            android:id="@+id/wifi_connect_dialog_show_advanced_options"
            style="@style/DialogCheckBoxImageStyle"
            android:layout_marginLeft="185dp"
            android:background="@drawable/check_off" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_advanced_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:visibility="visible">

        <View
            android:layout_width="335dp"
            android:layout_height="1dip"
            android:background="@color/black"
            android:layout_gravity="center_horizontal" />


        <LinearLayout
            android:id="@+id/ll_metered"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/WifiDetailTextViewStyle1"
                android:text="@string/wifi_dialog_metered" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/metered_result"
                    style="@style/WifiDetailTextViewStyle1"
                    android:text="@string/metered_dialog_auto" />

                <ImageView
                    android:id="@+id/metered_down_drop"
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_drop_down" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="335dp"
            android:layout_height="1dip"
            android:background="@color/black"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/ll_proxy"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/WifiDetailTextViewStyle1"
                android:text="@string/wifi_dialog_proxy" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/proxy_result"
                    style="@style/WifiDetailTextViewStyle1"
                    android:text="@string/proxy_dialog_none" />

                <ImageView
                    android:id="@+id/proxy_down_drop"
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_drop_down" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="335dp"
            android:layout_height="1dip"
            android:background="@color/black"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/ll_ip_settings"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/WifiDetailTextViewStyle1"
                android:text="@string/wifi_dialog_ip_settings" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ip_settings_result"
                    style="@style/WifiDetailTextViewStyle1"
                    android:text="@string/ip_settings_dialog_dhcp" />

                <ImageView
                    android:id="@+id/ip_settings_down_drop"
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/icon_drop_down" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="335dp"
            android:layout_height="1dip"
            android:background="@color/black"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/ll_static_ip_settings"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="35dp">

                <TextView
                    style="@style/WifiDetailTextViewStyle1"
                    android:text="@string/wifi_dialog_ip_address" />

                <EditText
                    android:id="@+id/wifi_ip_address"
                    android:layout_marginTop="5dp"
                    style="@style/DialogEditTextStyle"
                    android:hint=""
                    android:text="192.168.0.1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="35dp">

                <TextView
                    style="@style/WifiDetailTextViewStyle1"
                    android:text="@string/wifi_dialog_gateway" />

                <EditText
                    android:id="@+id/wifi_gateway"
                    android:layout_marginTop="5dp"
                    style="@style/DialogEditTextStyle"
                    android:hint=""
                    android:text="192.168.0.1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="35dp">

                <TextView
                    style="@style/WifiDetailTextViewStyle1"
                    android:text="@string/wifi_dialog_network_prefix_length" />

                <EditText
                    android:id="@+id/wifi_network_prefix_length"
                    android:layout_marginTop="5dp"
                    style="@style/DialogEditTextStyle"
                    android:hint=""
                    android:text="24"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="35dp">

                <TextView
                    style="@style/WifiDetailTextViewStyle1"
                    android:text="@string/wifi_dialog_dns1" />

                <EditText
                    android:id="@+id/wifi_dns1"
                    android:layout_marginTop="5dp"
                    style="@style/DialogEditTextStyle"
                    android:hint=""
                    android:text="8.8.8.8"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/wifi_connect_dialog_cancle"
            style="@style/DialogButtonStyle"
            android:text="@string/wifi_dialog_cancel" />
        <Button
            android:id="@+id/wifi_connect_dialog_connect"
            style="@style/DialogButtonStyle"
            android:layout_marginLeft="60dp"
            android:text="@string/wifi_dialog_connect" />
    </LinearLayout>

    <TextView
        android:id="@+id/wifi_delete_this_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginBottom="15dp"
        android:autoLink="all"
        android:text="@string/wifi_dialog_delete_internet_setting"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:visibility="gone" />
</LinearLayout>